# sidoc

./: .gitignore  Cargo.toml
src/: builder.rs  doc.rs  err.rs  lib.rs  render.rs
tests/: empty_ref.rs  simple_http.rs  simple_ref.rs
